--- a/apps/client/src/assets/i18n/ko-KR.json
+++ b/apps/client/src/assets/i18n/ko-KR.json
@@ -1287,7 +1287,7 @@
     "3d_model_help": "3D 모델링 미리보기",
     "Achievements": "업적",
     "Currencies": "화폐",
-    "Rowena_splendor": "로웨나 상회 거래 (별 = 20% 추가 경험치)",
+    "Rowena_splendor": "로웨나 상회 거래 (별 = 20% 추가 보상)",
     "Unlocks": "개방",
     "ITEM": {
       "Masterpiece_base": "기본",
